Fixing issues for the main page on mobile

--- a/style.css
+++ b/style.css
@@ -93,4 +93,8 @@ body {
 		height: 200px;
 		width: 200px;
 	}
+	
+	#mcont {
+		display: block;
+	}
 }
